Add duoshuo share

--- a/source/404.html
+++ b/source/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Spotlight</title>
+  <title>404</title>
   <style>
     * { 
       margin: 0; padding: 0;
